--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -69,6 +71,7 @@
 @layer base {
   * {
     @apply border-border;
+    font-family: "Nunito Sans", sans-serif;
   }
   body {
     @apply bg-background text-foreground;
